--- a/packages/testenv/package.json
+++ b/packages/testenv/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@0x/sol-compiler": "^3.1.15",
+    "@erasure/crypto-ipfs": "^1.2.5",
     "@graphprotocol/graph-cli": "^0.16.0",
     "@graphprotocol/graph-ts": "^0.16.0",
     "argparse": "^1.0.10",
